Add some email validation
- using a library for better
  email validation
- add other exceptions for
  length and multiple '+'s

--- a/app/package.json
+++ b/app/package.json
@@ -19,5 +19,8 @@
   "engines": {
     "node": "22.21.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "email-regex-safe": "^4.0.0"
+  }
 }
