--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+dist
+dist-ssr
+*.local
+
 # Dependency directories
-*/node_modules/
+node_modules
