--- a/app/package.json
+++ b/app/package.json
@@ -2,8 +2,13 @@
   "name": "email-alias-generator",
   "version": "1.0.0",
   "description": "Generates simple <user>+<random>@<domain> email aliases for use when signing up for accounts. This helps to identify the source of spam",
+  "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "vite --host",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:once": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
@@ -13,14 +18,27 @@
   ],
   "author": "Kieran",
   "license": "MIT",
-  "devDependencies": {
-    "jest": "^30.2.0"
-  },
   "engines": {
     "node": "22.21.0"
   },
-  "type": "module",
   "dependencies": {
-    "email-regex-safe": "^4.0.0"
+    "email-regex-safe": "^4.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.36.0",
+    "@types/node": "^24.6.0",
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
+    "jest": "^30.2.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "vite": "^7.1.7"
   }
 }
