--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "email-alias-generator",
   "version": "1.0.0",
   "description": "Generates simple <user>+<random>@<domain> email aliases for use when signing up for accounts. This helps to identify the source of spam",
+  "homepage": "https://kieranongh.github.io/email-alias-generator/",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -10,7 +11,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
-    "test:once": "NODE_OPTIONS=--experimental-vm-modules jest"
+    "test:once": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist -b master --dest ./docs -m 'Deploy to GitHub pages'"
   },
   "keywords": [
     "email",
@@ -35,6 +38,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "jest": "^30.2.0",
     "typescript": "~5.9.3",
