--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "node": "22.21.0"
   },
   "dependencies": {
+    "bulma": "^1.0.4",
     "email-regex-safe": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
