--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
@@ -42,6 +43,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "jest": "^30.2.0",
+    "ts-jest": "^29.4.5",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
