--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "jest": "^30.2.0",
+    "prettier": "3.6.2",
     "ts-jest": "^29.4.5",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
