--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -5,6 +5,6 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "esModuleInterop": true,
-  },
+    "esModuleInterop": true
+  }
 }
